--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ main {
     margin: 20% 25% 20% 25%;
 }
 
-button {
+a {
     width: 50vw;
     padding: 10px;
     margin: 10px 0 10px 0;
@@ -34,14 +34,15 @@ button {
     color: white;
     font-weight: 700;
     border: 3px solid white;
+    text-decoration: none;
 }
 
-button:hover{
+a:hover{
     border-radius: 5px;
     box-shadow: 2px 2px 2px black;
 }
 
-button:active{
+a:active{
     background-color: #88b257;
 }
 
