--- a/style.css
+++ b/style.css
@@ -57,3 +57,8 @@ img {
 #body_seguranca {
     zoom: 0.5;
 }
+
+#video_monitoramento {
+    margin: 20px 25% 20px 25%;
+    border: 5px solid white;
+}
